# patch-qed

./: .gitignore  CONTEXT.md  Cargo.toml  Cargo.toml.backup  DECISIONS.md  DESIGN.md  LLVM_IR.md  NEXT_STEPS.md  README.md  RESUME.md  STATUS.md  justfile
.github/workflows/: ci-linux.yml  ci-macos.yml
compiler/: Cargo.toml
compiler/src/: codegen.rs  lib.rs  main.rs
compiler/src/ast/: mod.rs
compiler/src/ir/: mod.rs
compiler/src/parser/: grammar.rs  lexer.rs  mod.rs
compiler/src/types/: mod.rs
examples/: access_control.qed  business_rules.qed  family.leem  graph.leem
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: main.rs
src/ast/: mod.rs
src/codegen/: mod.rs
src/ir/: mod.rs
src/parser/: grammar.rs  lexer.rs  mod.rs
src/runtime/: mod.rs
src/types/: mod.rs
