[package]
name = "leem"
version = "0.1.0"
edition = "2021"
authors = ["navicore"]

[[bin]]
name = "leemc"
path = "src/main.rs"

[dependencies]
# Parsing
logos = "0.14"
chumsky = "0.9"

# LLVM backend (optional - requires LLVM installed)
inkwell = { version = "0.5", features = ["llvm17-0"], optional = true }

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Pretty printing and diagnostics
ariadne = "0.4"
codespan-reporting = "0.11"

[features]
default = []
llvm = ["inkwell"]

[dev-dependencies]
pretty_assertions = "1.4"
