[workspace]
members = ["runtime", "compiler"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["navicore"]
license = "MIT"

[workspace.dependencies]
# Concurrency - Erlang-style green threads for CSP concurrency
may = "0.3"

# Memory management - Fast bump allocation
bumpalo = "3.16"

# System calls
libc = "0.2"

# Parsing
logos = "0.14"
chumsky = "0.10.0"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Pretty printing and diagnostics
ariadne = "0.4"
codespan-reporting = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
